apps/netbox/base/ingress/netbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: netbox.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netbox
            port:
              number: 80
  tls:
  - hosts:
    - netbox.example.com
    secretName: wildcard-tls
